# dataframe-python-rust

./: .gitignore  Cargo.toml  README.md  dask_benchmark.py  get_wikipedia_table.py  pandas_benchmark.py
native-rust/: Cargo.toml
native-rust-optimized/: Cargo.toml
native-rust-optimized/src/: main.rs  utils.rs
native-rust/src/: RUST.code-workspace  main.rs  parallel.rs  utils.rs
polars-eager/: Cargo.toml
polars-eager/src/: main.rs
polars-lazy/: Cargo.toml
polars-lazy/src/: main.rs  utils.rs
