[package]
name = "polars-eager"
version = "0.1.0"
authors = ["xavier tao <shavtao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { git = "https://github.com/ritchie46/polars", features = [], version = "0.15.1"}
rayon = "1.5.1"