[package]
name = "polars-lazy"
version = "0.1.0"
authors = ["xavier tao <shavtao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars-lazy = { git =  "https://github.com/ritchie46/polars", features = [ "csv-file"], version = "0.15.1"}
polars = { git =  "https://github.com/ritchie46/polars", features = [ "csv-file"], version = "0.15.1"}
# remove simd for stable cargo
rayon = "1.5.1"